// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CLI help tree should expose each domain's operations 1`] = `
{
  "archive": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "X-Ray archive tools",
      "",
      "Usage: xrf-cli archive [COMMAND]",
      "",
      "Commands:",
      "  extract  Extract one archive file or directory without unpacking the complete set",
      "  find     Find archive entries whose logical path contains text",
      "  info     Describe an X-Ray archive volume or volume set",
      "  list     List the merged entries in an X-Ray archive volume or volume set",
      "  pack     Command to pack provided directory into *.db archive volumes",
      "  unpack   Command to unpack provided *.db into separate files",
      "  verify   Read every archive payload and verify decompression and CRC checks",
      "  help     Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "dialog": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Dialog parsing tools",
      "",
      "Usage: xrf-cli dialog [COMMAND]",
      "",
      "Commands:",
      "  parse  Command to read dialog xml and report what it holds",
      "  help   Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "docs": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "CLI documentation tools",
      "",
      "Usage: xrf-cli docs [COMMAND]",
      "",
      "Commands:",
      "  generate  Command to generate markdown reference for all CLI commands",
      "  help      Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "externs": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Script extern export tools",
      "",
      "Usage: xrf-cli externs [COMMAND]",
      "",
      "Commands:",
      "  export  Export TypeScript extern declarations as JSON, XML, or HTML",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "gamedata": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Assembled gamedata verification tools",
      "",
      "Usage: xrf-cli gamedata [COMMAND]",
      "",
      "Commands:",
      "  list    List assets resolved by an installation or gamedata tree",
      "  verify  Command to verify gamedata",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "ltx": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "LTX configuration tools",
      "",
      "Usage: xrf-cli ltx [COMMAND]",
      "",
      "Commands:",
      "  format  Command to format ltx and ini files",
      "  verify  Command for verification of ltx and ini files",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "ogf": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "OGF model tools",
      "",
      "Usage: xrf-cli ogf [COMMAND]",
      "",
      "Commands:",
      "  info                Command to print information about provided ogf file",
      "  patch-motion-refs   Command to rewrite motion refs of provided ogf file",
      "  patch-texture-refs  Command to rename a texture reference of provided ogf file",
      "  verify              Command to verify ogf visuals can be packed for rendering",
      "  help                Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "omf": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "OMF motion tools",
      "",
      "Usage: xrf-cli omf [COMMAND]",
      "",
      "Commands:",
      "  duplicate-motion  Command to copy a motion of provided omf file under a new name",
      "  filter-motions    Command to keep only selected motions of provided omf file",
      "  info              Command to print information about provided omf file",
      "  rename-motions    Command to rename motions of provided omf file",
      "  repack            Command to repack provided omf file or directory of omf files",
      "  help              Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "particle": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Particle library tools",
      "",
      "Usage: xrf-cli particle [COMMAND]",
      "",
      "Commands:",
      "  info       Command to print information about provided particle file",
      "  pack       Command to pack unpacked particle files into single particle.xr",
      "  repack     Command to repack provided particle.xr into another file",
      "  re-unpack  Command to re-unpack provided particle directory into another directory",
      "  unpack     Command to unpack provided particle.xr into separate files",
      "  verify     Command to verify provided particle file",
      "  help       Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "spawn": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Spawn file tools",
      "",
      "Usage: xrf-cli spawn [COMMAND]",
      "",
      "Commands:",
      "  info    Command to print information about provided spawn file",
      "  pack    Command to pack unpacked spawn files into single *.spawn",
      "  repack  Command to repack provided *.spawn into another file",
      "  unpack  Command to unpack provided *.spawn into separate files",
      "  verify  Command to verify provided spawn file",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "texture": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Texture asset tools",
      "",
      "Usage: xrf-cli texture [COMMAND]",
      "",
      "Commands:",
      "  crop-dds                    Command to crop a rectangular region out of a dds file into a new dds file",
      "  info-dds                    Command to print information about provided dds file",
      "  pack-equipment-icons        Command to pack dds icons into single element",
      "  pack-texture-description    Command to pack texture description xml",
      "  unpack-equipment-icons      Command to unpack dds icons into multiple icons",
      "  unpack-texture-description  Command to unpack dds icons into multiple icons",
      "  verify-equipment-icons      Command to check inventory icon grid rects for overlaps",
      "  help                        Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "thm": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "THM texture metadata tools",
      "",
      "Usage: xrf-cli thm [COMMAND]",
      "",
      "Commands:",
      "  patch-bump  Command to repoint the bump texture reference of provided thm file",
      "  help        Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
  "translation": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Translation file tools",
      "",
      "Usage: xrf-cli translation [COMMAND]",
      "",
      "Commands:",
      "  build       Command to build translation files into gamedata",
      "  initialize  Command to initialize translation files",
      "  parse       Command to parse xml translation into json variants",
      "  verify      Command to verify translation files integrity",
      "  help        Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
  },
}
`;

exports[`CLI help tree should expose every domain from root help 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "XRF forge CLI tools application",
    "",
    "Usage: xrf-cli [COMMAND]",
    "",
    "Commands:",
    "  archive      X-Ray archive tools",
    "  dialog       Dialog parsing tools",
    "  docs         CLI documentation tools",
    "  externs      Script extern export tools",
    "  gamedata     Assembled gamedata verification tools",
    "  ltx          LTX configuration tools",
    "  ogf          OGF model tools",
    "  omf          OMF motion tools",
    "  particle     Particle library tools",
    "  spawn        Spawn file tools",
    "  texture      Texture asset tools",
    "  thm          THM texture metadata tools",
    "  translation  Translation file tools",
    "  help         Print this message or the help of the given subcommand(s)",
    "",
    "Options:",
    "  -h, --help  Print help",
  ],
}
`;

exports[`CLI help tree should show domain help when an operation is missing 1`] = `
{
  "archive": {
    "exitCode": 2,
    "stderr": [
      "X-Ray archive tools",
      "",
      "Usage: xrf-cli archive [COMMAND]",
      "",
      "Commands:",
      "  extract  Extract one archive file or directory without unpacking the complete set",
      "  find     Find archive entries whose logical path contains text",
      "  info     Describe an X-Ray archive volume or volume set",
      "  list     List the merged entries in an X-Ray archive volume or volume set",
      "  pack     Command to pack provided directory into *.db archive volumes",
      "  unpack   Command to unpack provided *.db into separate files",
      "  verify   Read every archive payload and verify decompression and CRC checks",
      "  help     Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "dialog": {
    "exitCode": 2,
    "stderr": [
      "Dialog parsing tools",
      "",
      "Usage: xrf-cli dialog [COMMAND]",
      "",
      "Commands:",
      "  parse  Command to read dialog xml and report what it holds",
      "  help   Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "docs": {
    "exitCode": 2,
    "stderr": [
      "CLI documentation tools",
      "",
      "Usage: xrf-cli docs [COMMAND]",
      "",
      "Commands:",
      "  generate  Command to generate markdown reference for all CLI commands",
      "  help      Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "externs": {
    "exitCode": 2,
    "stderr": [
      "Script extern export tools",
      "",
      "Usage: xrf-cli externs [COMMAND]",
      "",
      "Commands:",
      "  export  Export TypeScript extern declarations as JSON, XML, or HTML",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "gamedata": {
    "exitCode": 2,
    "stderr": [
      "Assembled gamedata verification tools",
      "",
      "Usage: xrf-cli gamedata [COMMAND]",
      "",
      "Commands:",
      "  list    List assets resolved by an installation or gamedata tree",
      "  verify  Command to verify gamedata",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "ltx": {
    "exitCode": 2,
    "stderr": [
      "LTX configuration tools",
      "",
      "Usage: xrf-cli ltx [COMMAND]",
      "",
      "Commands:",
      "  format  Command to format ltx and ini files",
      "  verify  Command for verification of ltx and ini files",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "ogf": {
    "exitCode": 2,
    "stderr": [
      "OGF model tools",
      "",
      "Usage: xrf-cli ogf [COMMAND]",
      "",
      "Commands:",
      "  info                Command to print information about provided ogf file",
      "  patch-motion-refs   Command to rewrite motion refs of provided ogf file",
      "  patch-texture-refs  Command to rename a texture reference of provided ogf file",
      "  verify              Command to verify ogf visuals can be packed for rendering",
      "  help                Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "omf": {
    "exitCode": 2,
    "stderr": [
      "OMF motion tools",
      "",
      "Usage: xrf-cli omf [COMMAND]",
      "",
      "Commands:",
      "  duplicate-motion  Command to copy a motion of provided omf file under a new name",
      "  filter-motions    Command to keep only selected motions of provided omf file",
      "  info              Command to print information about provided omf file",
      "  rename-motions    Command to rename motions of provided omf file",
      "  repack            Command to repack provided omf file or directory of omf files",
      "  help              Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "particle": {
    "exitCode": 2,
    "stderr": [
      "Particle library tools",
      "",
      "Usage: xrf-cli particle [COMMAND]",
      "",
      "Commands:",
      "  info       Command to print information about provided particle file",
      "  pack       Command to pack unpacked particle files into single particle.xr",
      "  repack     Command to repack provided particle.xr into another file",
      "  re-unpack  Command to re-unpack provided particle directory into another directory",
      "  unpack     Command to unpack provided particle.xr into separate files",
      "  verify     Command to verify provided particle file",
      "  help       Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "spawn": {
    "exitCode": 2,
    "stderr": [
      "Spawn file tools",
      "",
      "Usage: xrf-cli spawn [COMMAND]",
      "",
      "Commands:",
      "  info    Command to print information about provided spawn file",
      "  pack    Command to pack unpacked spawn files into single *.spawn",
      "  repack  Command to repack provided *.spawn into another file",
      "  unpack  Command to unpack provided *.spawn into separate files",
      "  verify  Command to verify provided spawn file",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "texture": {
    "exitCode": 2,
    "stderr": [
      "Texture asset tools",
      "",
      "Usage: xrf-cli texture [COMMAND]",
      "",
      "Commands:",
      "  crop-dds                    Command to crop a rectangular region out of a dds file into a new dds file",
      "  info-dds                    Command to print information about provided dds file",
      "  pack-equipment-icons        Command to pack dds icons into single element",
      "  pack-texture-description    Command to pack texture description xml",
      "  unpack-equipment-icons      Command to unpack dds icons into multiple icons",
      "  unpack-texture-description  Command to unpack dds icons into multiple icons",
      "  verify-equipment-icons      Command to check inventory icon grid rects for overlaps",
      "  help                        Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "thm": {
    "exitCode": 2,
    "stderr": [
      "THM texture metadata tools",
      "",
      "Usage: xrf-cli thm [COMMAND]",
      "",
      "Commands:",
      "  patch-bump  Command to repoint the bump texture reference of provided thm file",
      "  help        Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
  "translation": {
    "exitCode": 2,
    "stderr": [
      "Translation file tools",
      "",
      "Usage: xrf-cli translation [COMMAND]",
      "",
      "Commands:",
      "  build       Command to build translation files into gamedata",
      "  initialize  Command to initialize translation files",
      "  parse       Command to parse xml translation into json variants",
      "  verify      Command to verify translation files integrity",
      "  help        Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -h, --help  Print help",
    ],
    "stdout": [],
  },
}
`;
